2025-07-24  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha02: Iron Champs 2nd Place';git push
	git tag -a 5.3.5-alpha02 -m 'ncks: plev/prs_3d in xtr fl, ';git push --tags

	* Change obsolete GPL copyright statement in obsolete ncap_lex.[cl] files

2025-07-22  Charlie Zender  <zender@uci.edu>

	* Fix ncvardmnlatlon filter definition typo

2025-07-18  Charlie Zender  <zender@uci.edu>

	* Allow pure pressure input variables plev (or p3d) to be stored in external file

2025-07-17  Charlie Zender  <zender@uci.edu>

	* nco_rgr.c nco_vrt_ntp(): Add stubs for prs_3d interpolation

2025-07-13  Charlie Zender  <zender@uci.edu>

	* nco.texi update Forward

2025-07-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha01: Department Q';git push
	git tag -a 5.3.5-alpha01 -m 'Functionally identical to 5.3.4 except some documentation';git push --tags

	* nco.texi update Forward

2025-07-01  Charlie Zender  <zender@uci.edu>

	* Document more examples of ncra --per-record-weighting (--prw)

2025-06-22  Charlie Zender  <zender@uci.edu>

	* Document locations for input/output PS with vrt_in vrt_out

2025-06-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4: Fourth Place Fourth Time';git push
	git tag -a 5.3.4 -m 'all: --gad glb att del; ncclimo: nfr tpd/dpf when !tm_bnds, use is_hrz; ncks: --is_hrz, S1D add lut_out=789 option, frc_column add urb_all, sng att prn ln brk; ncrcat: !mnt_chk bnd; ncremap cxl alg_typ=tempest';git push --tags

2025-06-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.4-beta01: Trombone Shorty at The Greek';git push