@@ -1,8 +1,14 @@
-2025-07-24  Charlie Zender  <zender@uci.edu>
+2025-08-08  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.3.5-alpha02 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha02: Iron Champs 2nd Place';git push
-	git tag -a 5.3.5-alpha02 -m 'ncks: plev/prs_3d in xtr fl, ';git push --tags
+	git tag -a 5.3.5-alpha02 -m 'all: zfp flt stb; ncks: plev/prs_3d in xtr fl, ';git push --tags
+
+	* Add H5Z_FILTER_ZFP=32013 to internal database
+
+2025-07-24  Charlie Zender  <zender@uci.edu>
+
+	* Add grd_crc_ngl.nco to compute distances/accuracy on great circles
 
 	* Change obsolete GPL copyright statement in obsolete ncap_lex.[cl] files
 
